<resources>
    <string name="app_name">BusyBuddy</string>
    <string name="welcome_computerRepair">Computer Repair</string>
    <string name="welcome_subtitle">Booking day to day services, the easy way!</string>
    <string name="welcome_plumber">Plumber</string>
    <string name="welcome_electrician">Electrician</string>
    <string name="welcome_packer">Packers and Movers</string>
    <string name="getStarted">Get Started</string>
    <string name="loginwith_phone">Login/Sign Up With Phone Number</string>
    <string name="loginwith_email">Login/Sign Up With Email</string>
    <string name="enter_email">Please enter your\nEmail ID</string>
    <string name="next">Next</string>
    <string name="email_Id">Email id</string>
    <string name="skip">Skip</string>
    <string name="enter_phone">Please enter Your\nphone number</string>
    <string name="phone_no">Phone Number</string>
    <string name="pass">Enter your Password</string>
    <string name="enter_pass">Welcome back!\nYou’ve been missed</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="enter_code">Please enter the 6-digit code\nsent to you at +1 777 8521 001</string>
    <string name="enter_code_email">Please enter the 6-digit code\nsent to you at Admin@gmail.com</string>
    <string name="verification_otp">Verification OTP</string>
    <string name="verify">Verify</string>
    <string name="codenot_recieved">If you don’t receive the code in %d seconds\ntap below to resend it</string>
    <string name="allow_location">Allow Location</string>
    <string name="your_current_loc">Your Current Location</string>
    <string name="enableLoc_subtitle">We want to access your location only to provide a better experience by helping you find service providers nearby.</string>
    <string name="enable_loc">Enable location service</string>
    <string name="cancel">Cancel</string>
    <string name="allow_push">Enable Push</string>
    <string name="enable_push_noti">Enable push notifications</string>
    <string name="enablepush_subtitle">Enable push notifications to receive notifications with service updates &amp; app news.</string>
    <string name="allow">Allow</string>
    <string name="congrats_setUp">Congratulations! You successfully completed your profile setup.</string>
    <string name="congrats_verifiedEmail">Congratulations! You have successfully verified your Email.</string>
    <string name="congrats_verifiedPhone">Congratulation! You have successfully verified your Phone Number</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Enter Password</string>
    <string name="search">Search</string>
    <string name="how_i_can_help_you">How can I help you?</string>
    <string name="handyman">Handyman</string>
    <string name="movers">Movers</string>
    <string name="cleaning">Cleaning</string>
    <string name="parties_events"><![CDATA[Parties & Events]]></string>
    <string name="holidays">Holidays</string>
    <string name="wellbeing">Wellbeing</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="chat">Chat</string>
    <string name="my_booking">My Booking</string>
    <string name="trending">Trending</string>
    <string name="password_must">Password must be at least 8 characters long.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="contact_info">Contact Info</string>
    <string name="apt_room">Apt. of Room</string>
    <string name="details_task">Details about task</string>
    <string name="payment_method">Payment Method</string>
    <string name="cardholder_name">Cardholder Name :</string>
    <string name="card_number">Card Number :</string>
    <string name="cvv">CVV</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="task">Task</string>
    <string name="paid">Paid</string>
    <string name="chat_now">Chat now</string>
    <string name="i_have_a_great_deal_of_experience_using_power_tools_and_have_remodeled_two_homes_i_own_most_necessary_tools_for_this_type_of_work">I have a great deal of experience using power tools and have remodeled two homes. I own most necessary tools for this type of work.</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="rate_now">Rate Now</string>
    <string name="type_a_message">Type a message...</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="report">Report</string>
    <string name="when_require">When do you require the service?</string>
    <string name="later">Later</string>
    <string name="now">Now</string>
    <string name="location">Location</string>
    <string name="search_location">Search location</string>
    <string name="task_desc">Task Description</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="sortby">Sortby</string>
    <string name="filter">Filter</string>
    <string name="select">Select</string>
    <string name="review_details">Review Details</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="selected">Selected</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="sync_calender">Sync calendar</string>
    <string name="change_password">Change Password</string>
    <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="about_app">About us</string>
    <string name="booking_success">Booking Successful</string>
    <string name="thank_you_for_booking">Thank you for using App we wish you a Happy and comfortable Holiday with  Family and Relatives.</string>
    <string name="thank_you_for_booking2">Thank you for using the app and we hope to see you booking a service again soon!</string>
    <string name="preview_booking_details">Preview Booking Details</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="pay_now">Pay now</string>
    <string name="card_no">Card Number:</string>
    <string name="card_holderName">Cardholder Name:</string>
    <string name="total_payment">Total Payment</string>
    <string name="email_ID">Email ID</string>
    <string name="reset_password">Reset Password</string>
    <string name="apply">Apply</string>
    <string name="filters">Filters</string>
    <string name="services_found">Providers Found</string>
    <string name="select_date">Select Date</string>
    <string name="service_date_time">Service date &amp; time</string>
    <string name="select_time">Select time slots</string>
    <string name="terrible">Terrible</string>
    <string name="great">Great</string>
    <string name="good">Good</string>
    <string name="okay">Okay</string>
    <string name="gotodashboard">GO TO DASHBOARD</string>
    <string name="gotoeditprofile">GO TO PROFILE</string>
    <string name="bad">Bad</string>
    <string name="resend">Resend</string>
    <string name="submit">Submit</string>
    <string name="change_pass_success">Password changed successfully</string>
    <string name="places_api_key">AIzaSyCudljC7a_B3udFOKv1YiY2N190wrRRVAw</string>
    <string name="facebook_app_id">310873743629750</string>
    <string name="fb_login_protocol_scheme">fb310873743629750</string>
<!--    <string name="facebook_app_id">694692264696126</string>-->
<!--    <string name="fb_login_protocol_scheme">fb694692264696126</string>-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alphabets">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="logout_really">Do you really want to logout?</string>
    <string name="sessionExpired">Login session has expired.</string>
    <string name="login_proceed">Do you want to login to proceed?</string>
    <string name="cancel_ur_booking">Do you want to cancel your booking?</string>
    <string name="settings">Settings</string>
    <string name="enable_location_provider_message">Enable Location Provider! Go to settings menu?</string>
    <string name="notifications">Notifications</string>
    <string name="check_internet">Please Check Your Internet Connection</string>
    <string name="enter_your_suggestion">Enter your suggestion</string>
    <string name="describe_sugestion">Describe your suggestion</string>
    <string name="suggestions">Suggestions</string>
    <string name="phone_number_is_mandatory_to_book_a_service">Phone number is mandatory to book a service.</string>
    <string name="emailMandatory">Email is mandatory to book a service.</string>
    <string name="booking_day_to_day_services_made_easy">Book household services, instantly.</string>
    <string name="welcome_subtitleelectrician">Same day services, delivered.</string>
    <string name="welcome_subtitlecomputer">Your to-do tasks, done.</string>
    <string name="youhavetochatwithserviceprovidertonegotiateprice">Once booking request is accepted, you will be able to chat with service provider.</string>
    <!--<string name="youhavetochatwithserviceprovidertonegotiateprice">You have to chat with the service provider to start negotiations about the service price.</string>-->
    <string name="ohk">Continue</string>
    <string name="remove">Remove</string>
    <string name="minimumoneserviceisrequiredtocontinue">Minimum one service is required to continue</string>
    <string name="sessionExpiredpleaselogin">Your session has been expired..please login again to continue.</string>
    <string name="nophone">We are unable to get any phone number associated with this account.Please update your phone number and  take advantages of our services.</string>
    <string name="noEmail">We are unable to get any email associated with this account.Please update your email and  take advantages of our services.</string>
    <string name="agree">Agree</string>
    <string name="serviceproviderhascompletetheorderareyouagree">Service provider has complete this order,please press agree if the order is really completed.</string>
    <string name="torateserviceproviderpleaseagree">You can rate to service provider only after \"Agree\" for order completion.</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="flexible">Flexible</string>
</resources>
