<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".view.register.AllowPushActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/group_2679"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/allow_push"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/top_round_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">

        <ImageView
            android:id="@+id/iv_noti"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_25sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/noti_back"
            android:layout_margin="@dimen/_40sdp"
            app:layout_constraintBottom_toTopOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/sf_prodisplay_bold"
            android:text="@string/enable_push_noti"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:fontFamily="@font/sf_prodisplay_regular"
            android:gravity="center"
            android:text="@string/enablepush_subtitle"
            android:textColor="#656290"
            android:textSize="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/tv_allow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_allow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/round_corner_bg"
            android:fontFamily="@font/sf_prodisplay_regular"
            android:gravity="center"
            android:text="@string/allow"
            android:onClick="onClick"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@+id/tvCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/sf_prodisplay_bold"
            android:text="@string/cancel"
            android:textColor="@color/colorDisable"
            android:textSize="@dimen/_14sdp"
            android:textAlignment="center"
            android:onClick="onClick"
            android:layout_marginBottom="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_allow"
            app:layout_constraintStart_toStartOf="@id/tv_allow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>