<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".view.register.ResetPasswordActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/group_2679"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/reset_password"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/top_round_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <TextView
            android:id="@+id/tvPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/sf_prodisplay_regular"
            android:text="@string/password"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@color/transparent"
            android:fontFamily="@font/sf_prodisplay_bold"
            android:hint="@string/new_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="25"
            android:textColor="#0575E6"
            android:textColorHint="#e5e5e5"
            android:textSize="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPass" />

        <TextView
            android:id="@+id/tvRePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sf_prodisplay_regular"
            android:text="@string/re_password"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPass" />

        <EditText
            android:id="@+id/edtRePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@color/transparent"
            android:fontFamily="@font/sf_prodisplay_bold"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="25"
            android:textColor="#0575E6"
            android:textColorHint="#e5e5e5"
            android:textSize="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRePass" />


        <TextView
            android:id="@+id/tvUpdate"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/round_corner_bg_disabled"
            android:fontFamily="@font/sf_prodisplay_regular"
            android:gravity="center"
            android:text="@string/update"
            android:enabled="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/edtPass"
            app:layout_constraintStart_toStartOf="@id/edtPass"
            app:layout_constraintTop_toBottomOf="@+id/edtRePass"
            app:layout_constraintVertical_bias="0.84000003" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>